--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "faunadb": "^4.7.0",
     "next": "12.3.1",
     "next-auth": "^4.12.3",
     "react": "18.2.0",
