--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@stripe/stripe-js": "^1.38.1",
     "axios": "^1.1.0",
     "faunadb": "^4.7.0",
+    "micro": "^9.4.1",
     "next": "12.3.1",
     "next-auth": "^4.12.3",
     "react": "18.2.0",
